[project]
name = "membrane-breakout-3d"
version = "0.1.0"
description = "A physics-based 3D Breakout game with an elastic membrane paddle and verification scripts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pygame>=2.6",
]

[project.optional-dependencies]
analysis = [
    "plotly>=5.0",
]

[tool.uv]
package = false
